--- a/.github/workflows/shadow-scans.yml
+++ b/.github/workflows/shadow-scans.yml
@@ -40,7 +40,7 @@ jobs:
           ARTIFACTORY_DEPLOY_USERNAME: ${{ fromJSON(steps.secrets.outputs.vault).ARTIFACTORY_DEPLOY_USERNAME }}
           ARTIFACTORY_DEPLOY_ACCESS_TOKEN: ${{ fromJSON(steps.secrets.outputs.vault).ARTIFACTORY_ACCESS_TOKEN }}
         with:
-          maven-args: -Dcommercial -Dmaven.install.skip=true
+          maven-args: -Dcommercial
           artifactory-reader-role: private-reader
           artifactory-deployer-role: public-deployer
           run-shadow-scans: true
