--- a/.github/workflows/shadow-scans.yml
+++ b/.github/workflows/shadow-scans.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           version: 2025.9.12
       - uses: SonarSource/ci-github-actions/get-build-number@v1
-      - uses: SonarSource/ci-github-actions/config-maven@master # dogfood
+      - uses: SonarSource/ci-github-actions/config-maven@master # Dogfood
         env:
           CURRENT_VERSION: skip
           PROJECT_VERSION: skip
