--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: github-ubuntu-latest-s
     name: Build Project
     steps:
-      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
+      - uses: actions/checkout@v5
       - uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac # v2.4.4
         with:
           version: 2025.9.12
@@ -33,7 +33,7 @@ jobs:
 
       - uses: SonarSource/ci-github-actions/get-build-number@v1
 
-      - uses: SonarSource/ci-github-actions/config-maven@master # Dogfood
+      - uses: SonarSource/ci-github-actions/config-maven@v1
         env:
           CURRENT_VERSION: skip
           PROJECT_VERSION: skip
@@ -45,13 +45,13 @@ jobs:
         run: .github/scripts/set_maven_build_version.sh
       - name: Vault
         id: secrets
-        uses: SonarSource/vault-action-wrapper@320bd31b03e5dacaac6be51bbbb15adf7caccc32 # 3.1.0
+        uses: SonarSource/vault-action-wrapper@v3
         with:
           secrets: |
             development/artifactory/token/SonarSource-reddeer-public-deployer username | ARTIFACTORY_DEPLOY_USERNAME;
             development/artifactory/token/SonarSource-reddeer-public-deployer access_token | ARTIFACTORY_DEPLOY_ACCESS_TOKEN;
 
-      - uses: SonarSource/ci-github-actions/build-maven@v1 #dogfood
+      - uses: SonarSource/ci-github-actions/build-maven@v1
         env:
           ARTIFACTORY_DEPLOY_USERNAME: ${{ fromJSON(steps.secrets.outputs.vault).ARTIFACTORY_DEPLOY_USERNAME }}
           ARTIFACTORY_DEPLOY_ACCESS_TOKEN: ${{ fromJSON(steps.secrets.outputs.vault).ARTIFACTORY_ACCESS_TOKEN }}
@@ -105,7 +105,7 @@ jobs:
       DISPLAY: :10
       MAVEN_OPTS: -Xmx3072m
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: actions/checkout@v5
 
       - uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac # v2.4.4
         with:
@@ -182,14 +182,6 @@ jobs:
           path: ${{ github.workspace }}/${{ matrix.bundle }}.mp4
           if-no-files-found: ignore
 
-      - name: Upload XVFB log
-        if: always() && !cancelled()
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: xvfb-log-${{ matrix.bundle }}
-          path: ${{ github.workspace }}/Xvfb.out
-          if-no-files-found: ignore
-
       - name: Upload test results
         if: always() && !cancelled()
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -200,6 +192,17 @@ jobs:
             **/target/surefire-reports/TEST-*.xml
           if-no-files-found: ignore
 
+      - name: Generate test report on failure
+        if: failure()
+        uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2.1.1
+        with:
+          name: QA Test Report
+          reporter: java-junit
+          path: '**/target/surefire-reports/TEST-*.xml,**/test-results/**/*.xml'
+          list-suites: failed
+          list-tests: failed
+          fail-on-empty: false
+
   promote:
     needs:
       - build
@@ -209,7 +212,7 @@ jobs:
     name: Promote
 
     steps:
-      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
+      - uses: actions/checkout@v5
 
       - uses: SonarSource/ci-github-actions/promote@v1
         with:
